# kel-circle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  justfile  kel-circle.cabal
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
app/: Main.hs
client/: package-lock.json  package.json  playwright.config.ts  spago.yaml
client/e2e/: keri-helpers.ts  proposals.spec.ts  three-clients.spec.ts
client/kel-circle-client/: spago.yaml
client/kel-circle-client/src/FFI/: KeyRestore.js  KeyRestore.purs  SSE.js  SSE.purs  Storage.js  Storage.purs  WebCrypto.js  WebCrypto.purs
client/kel-circle-client/src/KelCircle/Client/: Api.purs  Codec.purs  Events.purs  Fold.purs  Identity.purs  KelValidate.purs  KeriParse.purs  Message.purs  Proposals.purs  State.purs  Types.purs
client/kel-circle-client/test/: Main.purs
client/kel-circle-trivial/: spago.yaml
client/kel-circle-trivial/src/View/: App.purs  Bootstrap.purs  Members.purs  Proposals.purs
docs/: mkdocs.yml
docs/docs/: architecture.md  base-semantics.md  event-classification.md  index.md  roadmap.md
lean/: KelCircle.lean  lake-manifest.json  lakefile.lean
lean/KelCircle/: BaseDecisions.lean  Events.lean  Fold.lean  GlobalSequence.lean  Invariants.lean  MemberKel.lean  Processing.lean  Proposals.lean
lib/: KelCircle.hs
lib/KelCircle/: Crypto.hs  Events.hs  Fold.hs  Gate.hs  InteractionVerify.hs  MemberKel.hs  Processing.hs  Proposals.hs  RotationVerify.hs  Sequence.hs  Server.hs  State.hs  Store.hs  Types.hs  Validate.hs
lib/KelCircle/Server/: JSON.hs
nix/: client-bundle.nix  docker-image.nix  project.nix
pr-preview/15/: index.html
pr-preview/15/roadmap/: index.html
pr-preview/15/search/: search_index.json
pr-preview/23/architecture/: index.html
pr-preview/24/: 404.html  sitemap.xml
pr-preview/24/javascripts/: mermaid.mjs
pr-preview/30/base-semantics/: index.html
pr-preview/30/search/: search_index.json
pr-preview/36/architecture/: index.html
pr-preview/36/base-semantics/: index.html
pr-preview/36/search/: search_index.json
pr-preview/38/event-classification/: index.html
roadmap/: index.html
test/: E2EMain.hs  Main.hs
test/E2E/: KelProperties.hs  Spec.hs  TestHelpers.hs
test/KelCircle/Test/: BaseDecisions.hs  Crypto.hs  Gate.hs  Generators.hs  InteractionVerify.hs  MemberKel.hs  Processing.hs  Proposals.hs  RotationVerify.hs  Sequence.hs
