cabal-version:   3.0
name:            kel-circle
version:         0.1.0.0
synopsis:        Synchronized multi-KEL circle protocol
description:
  A polymorphic Haskell library implementing a synchronized
  multi-KEL circle protocol. Each member has an independent
  KERI Key Event Log for identity management, while a global
  sequence enforces ordering on interaction events. The server
  acts as sequencer and circle participant, governing access
  control and event classification (decisions, proposals,
  responses) via a two-level semantic gate.

license:         Apache-2.0
license-file:    LICENSE
copyright:       (c) 2026 Paolo Veronelli
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Cryptography
build-type:      Simple
extra-doc-files: README.md

common language
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    StrictData

common opts-lib
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wredundant-constraints

common opts-test
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wname-shadowing -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  exposed-modules:
    KelCircle
    KelCircle.Events
    KelCircle.Fold
    KelCircle.Gate
    KelCircle.Processing
    KelCircle.Proposals
    KelCircle.Sequence
    KelCircle.State
    KelCircle.Types
    KelCircle.Validate
  build-depends:
    , base  >=4.18 && <5
    , text  >=2.0  && <3

test-suite unit-tests
  import:         language, opts-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    KelCircle.Test.BaseDecisions
    KelCircle.Test.Gate
    KelCircle.Test.Generators
    KelCircle.Test.Processing
    KelCircle.Test.Proposals
    KelCircle.Test.Sequence
  build-depends:
    , base           >=4.18 && <5
    , kel-circle
    , QuickCheck     >=2.14 && <3
    , tasty          >=1.4  && <2
    , tasty-hunit    >=0.10 && <1
    , tasty-quickcheck >=0.10 && <1
    , text           >=2.0  && <3
