cabal-version:   3.0
name:            kel-circle
version:         0.1.0.0
synopsis:        Synchronized multi-KEL circle protocol
description:
  A polymorphic Haskell library implementing a synchronized
  multi-KEL circle protocol. Each member has an independent
  KERI Key Event Log for identity management, while a global
  sequence enforces ordering on interaction events. The server
  acts as sequencer and circle participant, governing access
  control and event classification (decisions, proposals,
  responses) via a two-level semantic gate.

license:         Apache-2.0
license-file:    LICENSE
copyright:       (c) 2026 Paolo Veronelli
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Cryptography
build-type:      Simple
extra-doc-files: README.md

common language
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    StrictData

common opts-lib
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints

common opts-test
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages -Wname-shadowing
    -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  exposed-modules:
    KelCircle
    KelCircle.Crypto
    KelCircle.Events
    KelCircle.Fold
    KelCircle.Gate
    KelCircle.InteractionVerify
    KelCircle.MemberKel
    KelCircle.Processing
    KelCircle.RotationVerify
    KelCircle.Proposals
    KelCircle.Sequence
    KelCircle.Server
    KelCircle.Server.JSON
    KelCircle.State
    KelCircle.Store
    KelCircle.Types
    KelCircle.Validate

  build-depends:
    , aeson          >=2.1  && <3
    , base           >=4.18 && <5
    , bytestring     >=0.11 && <1
    , containers     >=0.6  && <1
    , http-types     >=0.12 && <1
    , keri-hs
    , sqlite-simple  >=0.4  && <1
    , stm            >=2.5  && <3
    , text           >=2.0  && <3
    , vector         >=0.12 && <1
    , wai            >=3.2  && <4

executable kel-circle-server
  import:         language, opts-lib
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:
    , base            >=4.18 && <5
    , kel-circle
    , stm             >=2.5  && <3
    , text            >=2.0  && <3
    , wai-app-static  >=3.1  && <4
    , warp            >=3.3  && <4

test-suite unit-tests
  import:         language, opts-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    KelCircle.Test.BaseDecisions
    KelCircle.Test.Crypto
    KelCircle.Test.Gate
    KelCircle.Test.Generators
    KelCircle.Test.InteractionVerify
    KelCircle.Test.MemberKel
    KelCircle.Test.Processing
    KelCircle.Test.RotationVerify
    KelCircle.Test.Proposals
    KelCircle.Test.Sequence

  build-depends:
    , aeson             >=2.1  && <3
    , base              >=4.18 && <5
    , kel-circle
    , keri-hs
    , QuickCheck        >=2.14 && <3
    , tasty             >=1.4  && <2
    , tasty-hunit       >=0.10 && <1
    , tasty-quickcheck  >=0.10 && <1
    , text              >=2.0  && <3

test-suite e2e-tests
  import:         language, opts-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        E2EMain.hs
  other-modules:
    E2E.Spec
    E2E.TestHelpers

  build-depends:
    , aeson        >=2.1  && <3
    , base         >=4.18 && <5
    , bytestring   >=0.11 && <1
    , directory    >=1.3  && <2
    , http-client  >=0.7  && <1
    , http-types   >=0.12 && <1
    , kel-circle
    , keri-hs
    , stm          >=2.5  && <3
    , tasty        >=1.4  && <2
    , tasty-hunit  >=0.10 && <1
    , temporary    >=1.3  && <2
    , text         >=2.0  && <3
    , warp         >=3.3  && <4
